[tool.poetry]
name = "pyhass-zont"
version = "0.1.0"
description = ""
authors = ["Игорь Кулябин <ikuliabin@astralinux.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
paho-mqtt = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
